@@ -1,6 +1,8 @@
 0.19.0 "" - YYYY/MM/DD
 ----------------------
  * Added Hungarian translation.
+ * qcommit: Give the user the option to update the branch if it is not up to
+   date. (Bug #439920, Gary van der Merwe)
 
 
 0.18.3 "Cypress" - YYYY/MM/DD
